--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
+        "symfony/monolog-bundle": "^3.5",
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
+        "symfony/web-server-bundle": "4.4.*"
     },
     "config": {
         "preferred-install": {
