--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,18 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "4.4.*",
+        "symfony/debug-pack": "^1.0",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.4.*",
         "symfony/monolog-bundle": "^3.5",
+        "symfony/twig-pack": "^1.0",
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.14",
         "symfony/web-server-bundle": "4.4.*"
     },
     "config": {
