--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,11 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+advert_index:
+    path: /advert
+    controller: App\Controller\AdvertController::index
+
+advert_view:
+    path: /advert/view/{id}
+    controller: app\Controller\AdvertController::view
+
+advert_add:
+    path: /advert/add
+    controller: App\Controller\AdvertController::add
